--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -24,7 +24,7 @@ body {
     display:flex;
 }
 
-.header-link a {
+.header-link * {
     color: white;
     text-decoration: none;
     margin: auto;
